# ghost

./: Cargo.toml  flake.nix
.claude/skills/version-bump/: SKILL.md
src/mcp/: mod.rs
tests/: mcp_server_tests.rs  tui_tests.rs
tests/expected/: task_list_empty.txt  task_list_selected.txt  task_list_with_tasks.txt
