[package]
name = "ghost"
version = "0.3.1"
authors = ["skanehira"]
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
uuid = { version = "1.19", features = ["v4"] }
thiserror = "2.0"
dirs = "6.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
notify = "8.2"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-scrollview = "0.6.4"
nix = { version = "0.30", features = ["signal", "process"] }
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["server","macros","stdio"] }
rust-mcp-transport = { version = "0.9", default-features = false, features = ["stdio"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-appender = "0.2"
tracing-rolling-file = { version = "0.1", features = ["non-blocking"] }

[dev-dependencies]
tempfile = "3.23"
pretty_assertions = "1.4"
regex = "1.12"
